Fixing layout issue.

--- a/src-gwt/org/opencms/ade/containerpage/client/ui/css/groupcontainer.css
+++ b/src-gwt/org/opencms/ade/containerpage/client/ui/css/groupcontainer.css
@@ -5,7 +5,8 @@
 	background: value("constants.css.backgroundColorDialog");
 }
 .inputRow{
-	height: 25px;
+	margin: 2px 0;
+	height: 30px;
 	overflow: hidden;
 }
 .inputLabel{
